fix colorpicker z-index issue

--- a/src/styl/vars.styl
+++ b/src/styl/vars.styl
@@ -1,10 +1,12 @@
 order = join(" ",
   base codemirror chart-configs project-configs,
   chartedit-inner chartedit-inner-active,
-  code-ctrl code-error code-tabs code-tabs-src code-tabs-view,
-  chart-dimension data-file data-field colorpicker chart-modal,
-  fullscreen-dimmer chartedit-active ,
+  code-ctrl code-tabs code-tabs-src code-tabs-view,
+  chart-dimension data-file data-field chart-modal,
+  fullscreen-dimmer chartedit-active,
+  code-error,
   base-modal nav-top,
+  colorpicker,
   chartedit-fullscreen chartedit-fullscreen-active fullscreen-err,
   assets-preview,
   notifications,
